--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -32,6 +32,6 @@
   </main>
 </div>
 <app-footer>
-  <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <span><i class="fa fa-github"></i> <a href="https://github.com/stevenbenmoha/predictive-payer-model">Github</a></span>
+  <span class="ml-auto">Find out more at <a href="https://www.novonordisk-us.com/">Novo Nordisk</a></span>
 </app-footer>
