--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,10 +1,10 @@
 <app-header
   [navbarBrandRouterLink]=""
   [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/analytics.png', width: 40, height: 40, alt: 'CoreUI Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/analytics.png', width: 30, height: 30, alt: 'CoreUI Logo'}"
+  [navbarBrandFull]="{src: 'assets/img/analytics.png', width: 40, height: 40, alt: 'Logo'}"
+  [navbarBrandMinimized]="{src: 'assets/img/analytics.png', width: 30, height: 30, alt: 'Logo'}"
   [sidebarToggler]="'lg'"
-  [asideMenuToggler]="'lg'">
+  [asideMenuToggler]="false">
   <ul class="nav navbar-nav d-md-down-none">
     <li class="nav-item px-3">
       <a class="nav-link" href="#">Home</a>
