--- a/src/app/views/base/input.component.html
+++ b/src/app/views/base/input.component.html
@@ -2,86 +2,205 @@
   <div class="row">
     <div class="col-md-6">
       <div class="card">
+          <form (ngSubmit)="onSubmit()" method="post" enctype="multipart/form-data" class="form-horizontal">
         <div class="card-header">
-          <strong>Input Offer Data</strong>  - Inputs will be fed into statistical model
+          <strong>Input Offer Data</strong> - Inputs will be fed into statistical model
         </div>
         <div class="card-body">
-          <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select1">Select</label>
-              <div class="col-md-9">
+              <label class="col-md-4 col-form-label" for="select1">Channel</label>
+              <div class="col-md-7">
                 <select id="select1" name="select1" class="form-control">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
+                  <option value="0">Please select channel</option>
+                  <option value="1">Commercial</option>
+                  <option value="2">Medicare Part D</option>
+                  <option value="3">Managed Medicaid</option>
+                  <option value="4">Health Insurance Exchange</option>
+                  <option value="5">Cash Card</option>
                 </select>
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="inline-radios">Inline Radios</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check form-check-inline mr-1" id="inline-radios">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio1" value="option1">
-                  <label class="form-check-label" for="inlineRadio1">One</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio2" value="option2">
-                  <label class="form-check-label" for="inlineRadio2">Two</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio3" value="option3">
-                  <label class="form-check-label" for="inlineRadio3">Three</label>
+              <label class="col-md-4 col-form-label" for="select2">Customer</label>
+              <div class="col-md-7">
+                <select id="select2" name="select2" class="form-control">
+                  <option value="0">Please select customer</option>
+                  <option value="1">CVS Caremark</option>
+                  <option value="2">Express Scripts Senior Care</option>
+                  <option value="3">Optum Rx</option>
+                  <option value="4">Humana</option>
+                  <option value="5">Prime</option>
+                  <option value="6">Envision</option>
+                  <option value="7">MagellanRx/option>
+                  <option value="8">Blue Cross Blue Shield Association</option>
+                  <option value="9">Kaiser Permanente</option>
+                  <option value="10">SilverScript
+                  <option value="11">Ascent</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="select3">Segment/Plan</label>
+              <div class="col-md-7">
+                <select id="select3" name="select3" class="form-control">
+                  <option value="0">Please select segment/plan</option>
+                  <option value="1">FEP</option>
+                  <option value="2">Aetna</option>
+                  <option value="3">Template</option>
+                  <option value="4">Customs</option>
+                  <option value="5">ESI</option>
+                  <option value="6">Premier Access</option>
+                  <option value="7">Premier Performance</option>
+                  <option value="8">Choice & Value</option>
+                  <option value="9">All</option>
+                  <option value="10">Walmart</option>
+                  <option value="11">CalPERS</option>
+                  <option value="11">United Healthcare</option>
+                  <option value="12">Net Results</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="select4">Brand or Manufacturer</label>
+              <div class="col-md-7">
+                <select id="select4" name="select4" class="form-control">
+                  <option value="0">Please select option</option>
+                  <option value="1">Brand</option>
+                  <option value="2">Manufacturer</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="select5">Tier</label>
+              <div class="col-md-7">
+                <select id="select5" name="select5" class="form-control">
+                  <option value="0">Please select tier</option>
+                  <option value="1">Tier 1 - Generic</option>
+                  <option value="2">Tier 2 - Preferred</option>
+                  <option value="3">Tier 3 - Non-Preferred</option>
+                  <option value="4">Tier 4 - Specialty</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="select6">Placement</label>
+              <div class="col-md-7">
+                <select id="select6" name="select6" class="form-control">
+                  <option value="0">Please select placement</option>
+                  <option value="1">1 of 1</option>
+                  <option value="2">1 of 2</option>
+                  <option value="3">1 of 3</option>
+                  <option value="4">1 of Many</option>
+                  <option value="5">Exclusive</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="textarea-input">Formulary</label>
+              <div class="col-md-7">
+                <textarea id="textarea-input" name="textarea-input" rows="2" class="form-control"
+                  placeholder="Please enter formulary"></textarea>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="select7">Restriction</label>
+              <div class="col-md-7">
+                <select id="select7" name="select7" class="form-control">
+                  <option value="0">Please select restriction</option>
+                  <option value="1">Unrestricted</option>
+                  <option value="2">Prior Authorization</option>
+                  <option value="3">1 Step Edit</option>
+                  <option value="4">2 Step Edit</option>
+                  <option value="5">NDC Block</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="select8">Product</label>
+              <div class="col-md-7">
+                <select id="select8" name="select8" class="form-control">
+                  <option value="0">Please select product</option>
+                  <option value="1">Levemir</option>
+                  <option value="2">Tresiba</option>
+                  <option value="3">NovoLog</option>
+                  <option value="4">Victoza</option>
+                  <option value="4">Ozempic</option>
+                  <option value="5">Saxenda</option>
+                  <option value="6">Norditropin</option>
+                  <option value="7">Novo-Seven</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="start-date-input">Start Date</label>
+              <div class="col-md-4">
+                <input class="form-control" id="start-date-input" type="date" name="start-date-input"
+                  placeholder="date">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="end-date-input">End Date</label>
+              <div class="col-md-4">
+                <input class="form-control" id="end-date-input" type="date" name="end-date-input" placeholder="date">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="rebate-input">Rebate</label>
+              <div class="col-md-3">
+                <div class="input-group">
+                  <input id="rebate-input" class="form-control" size="12" type="text" placeholder="">
+                  <div class="input-group-append">
+                    <span class="input-group-text">%</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-md-3 col-form-label">Checkboxes</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
-                  <label class="form-check-label" for="checkbox1">
-                    Option 1
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox2">
-                  <label class="form-check-label" for="checkbox2">
-                    Option 2
-                  </label>
-                </div>
-                <div class="form-check checkbox">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox3">
-                  <label class="form-check-label" for="checkbox3">
-                    Option 3
-                  </label>
+              <label class="col-md-4 col-form-label" for="select9">Price Protection Type</label>
+              <div class="col-md-7">
+                <select id="select9" name="select9" class="form-control">
+                  <option value="0">Please select type</option>
+                  <option value="1">Cumulative</option>
+                  <option value="2">Annual Reset</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="threshold-input">Price Protection Threshold</label>
+              <div class="col-md-3">
+                <div class="input-group">
+                  <input id="threshold-input" class="form-control" size="12" type="text" placeholder="">
+                  <div class="input-group-append">
+                    <span class="input-group-text">%</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-md-3 col-form-label">Inline Checkboxes</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox1" value="option1">
-                  <label class="form-check-label" for="inline-checkbox1">One</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox2" value="option2">
-                  <label class="form-check-label" for="inline-checkbox2">Two</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox3" value="option3">
-                  <label class="form-check-label" for="inline-checkbox3">Three</label>
+              <label class="col-md-4 col-form-label" for="lookback-date-input">Price Protection Lookback Date</label>
+              <div class="col-md-4">
+                <input class="form-control" id="lookback-date-input" type="date" name="lookback-date-input"
+                  placeholder="date">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="share-shift-input">Share Shift</label>
+              <div class="col-md-3">
+                <div class="input-group">
+                  <input id="share-shift-input" class="form-control" size="12" type="text" placeholder="">
+                  <div class="input-group-append">
+                    <span class="input-group-text">%</span>
+                  </div>
                 </div>
               </div>
             </div>
-          </form>
         </div>
         <div class="card-footer">
           <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
         </div>
+      </form>
       </div>
     </div>
-  </div><!--/.row-->
+  </div>
 </div>
