added loading screen and new logo

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="card">
       <div class="card-body">
-        Decision Dashboard
+        FlowRx Decision Dashboard
       </div>
     </div>
   </div>
