--- a/src/app/views/model/offer/offer.component.scss
+++ b/src/app/views/model/offer/offer.component.scss
@@ -1,5 +1,7 @@
 .card {
-    zoom: 0.9;
-    transform: scale(0.9);
-    -moz-transform: scale(0.9);
+    margin-top: -40px;
+    zoom: 0.7;
+    transform: scale(.9);
+    -moz-transform: scale(.9);
+    margin-bottom: -40px;
 }
