--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,8 +1,8 @@
 <app-header
   [navbarBrandRouterLink]=""
   [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/analytics.png', width: 40, height: 40, alt: 'Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/analytics.png', width: 30, height: 30, alt: 'Logo'}"
+  [navbarBrandFull]="{src: 'assets/img/logo.png', width: 100, height: 100, alt: 'Logo'}"
+  [navbarBrandMinimized]="{src: 'assets/img/logo.png', width: 30, height: 30, alt: 'Logo'}"
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="false">
   <ul class="nav navbar-nav d-md-down-none">
