--- a/src/app/views/model/offer/offer.component.html
+++ b/src/app/views/model/offer/offer.component.html
@@ -194,7 +194,7 @@
             </div>
         </div>
         <div class="card-footer">
-          <button type="submit" routerLink="/model/result" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
+          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
         </div>
       </form>
