--- a/src/app/views/model/result/result.component.html
+++ b/src/app/views/model/result/result.component.html
@@ -1,1 +1,18 @@
-<p>The result is:</p>
+<div class="app-loading" *ngIf="loading">
+        <div class="logo"></div>
+        <svg class="spinner" viewBox="25 25 50 50">
+          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+        </svg>
+</div>
+
+<div class="result" *ngIf="resultAvailable">
+  <div class="row">
+      <div class="col-md-6">
+          <div class="card">
+              <div class="card-body">
+                The result is: 
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
