added history table

--- a/src/app/views/model/offer/offer.component.html
+++ b/src/app/views/model/offer/offer.component.html
@@ -6,8 +6,8 @@
       <div class="card">
           <div [hidden]="submitted">
           <form (ngSubmit)="onSubmit(offerForm)" method="post" #offerForm="ngForm" enctype="multipart/form-data" class="form-horizontal">
-        <div class="card-header">
-          <h4><strong>Input Offer Data</strong> - Inputs will be fed into statistical model </h4>
+        <div class="card-header" style="text-align:center;">
+          <h4 style="margin: 0;"><strong>Input Offer Data</strong> - Inputs will be fed into statistical model </h4>
         </div>
         <div class="card-body">
             <div class="form-group row">
@@ -195,7 +195,7 @@
               </div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer" style="text-align:center;">
           <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
         </div>
@@ -212,7 +212,7 @@
             <div [hidden]="submitted">
             <form (ngSubmit)="onSubmit(offerForm)" method="post" #offerForm="ngForm" enctype="multipart/form-data" class="form-horizontal">
           <div class="card-header" style="text-align:center;">
-            <strong>Input Offer CSV </strong> - Inputs will be fed into statistical model
+            <h4 style="margin: 0;"><strong>Input Offer CSV </strong> - Inputs will be fed into statistical model </h4>
           </div>
           <div class="card-body">
               <div class="form-group row">
@@ -226,7 +226,7 @@
                 </div>
               </div>
             </div>
-          <div class="card-footer">
+          <div class="card-footer" style="text-align:center;">
             <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Upload</button>
             <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Clear file</button>
           </div>
