--- a/src/app/views/history/store/store.component.html
+++ b/src/app/views/history/store/store.component.html
@@ -1,45 +1,120 @@
-<div style="background-color: white;">
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-  </mat-form-field>
-  
+<div class="app-loading" *ngIf="loading">
+  <div class="logo"></div>
+  <svg class="spinner" viewBox="25 25 50 50">
+    <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+  </svg>
+</div>
+
+<div *ngIf="tableLoaded | async">
+<div class="card">
+    <div class="topText">Decision History
+    </div>
   <div class="mat-elevation-z8" style="margin-top: 30px;">
     <table mat-table [dataSource]="dataSource" matSort>
   
-      <!-- ID Column -->
       <ng-container matColumnDef="offerId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Offer ID </th>
         <td mat-cell *matCellDef="let row"> {{row.offerId}} </td>
       </ng-container>
   
-      <!-- Progress Column -->
-      <ng-container matColumnDef="progress">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+      <ng-container matColumnDef="channel">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Channel </th>
+        <td mat-cell *matCellDef="let row"> {{row.channel}} </td>
       </ng-container>
   
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      <ng-container matColumnDef="customer">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer </th>
+        <td mat-cell *matCellDef="let row"> {{row.customer}} </td>
       </ng-container>
   
-      <!-- Color Column -->
-      <ng-container matColumnDef="color">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-        <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+      <ng-container matColumnDef="segment">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Segment </th>
+        <td mat-cell *matCellDef="let row"> {{row.segment}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="brandOrManufacturer">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand/Manufacturer </th>
+        <td mat-cell *matCellDef="let row"> {{row.brandOrManufacturer}} </td>
       </ng-container>
   
+      <ng-container matColumnDef="tier">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Tier </th>
+        <td mat-cell *matCellDef="let row"> {{row.tier}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="placement">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Placement </th>
+        <td mat-cell *matCellDef="let row"> {{row.placement}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="formulary">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Formulary </th>
+        <td mat-cell *matCellDef="let row"> {{row.formulary}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="restriction">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Restriction </th>
+        <td mat-cell *matCellDef="let row"> {{row.restriction}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="product">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Product </th>
+        <td mat-cell *matCellDef="let row"> {{row.product}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="startDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+        <td mat-cell *matCellDef="let row"> {{row.startDate}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="endDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+        <td mat-cell *matCellDef="let row"> {{row.endDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="rebate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Rebate </th>
+        <td mat-cell *matCellDef="let row"> {{row.rebate}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="priceProtectionType">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price Protection Type </th>
+        <td mat-cell *matCellDef="let row"> {{row.priceProtectionType}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="priceProtectionThreshold">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price Protection Threshold </th>
+        <td mat-cell *matCellDef="let row"> {{row.priceProtectionThreshold}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="priceProtectionLookbackDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price Protection Lookback Date </th>
+        <td mat-cell *matCellDef="let row"> {{row.priceProtectionLookbackDate}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="shareShift">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Share Shift </th>
+        <td mat-cell *matCellDef="let row"> {{row.shareShift}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="result">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Result </th>
+          <td mat-cell *matCellDef="let row"> {{row.result}} </td>
+        </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;">
       </tr>
     </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
-  </div>
-  
-  
-  <!-- Copyright 2019 Google Inc. All Rights Reserved.
-      Use of this source code is governed by an MIT-style license that
-      can be found in the LICENSE file at http://angular.io/license -->
+</div>
+
+
+<div class="searchwrapper">
+    <mat-form-field>
+      Search:    
+        <input matInput (keyup)="applyFilter($event.target.value)"  class="search" placeholder="">
+        </mat-form-field>
+      </div>
+</div>
+<mat-paginator [pageSizeOptions]="[10]"></mat-paginator>
