--- a/src/app/views/history/store/store.component.scss
+++ b/src/app/views/history/store/store.component.scss
@@ -1,5 +1,30 @@
+@import url('./../../model/result/result.component.scss');
+@import '~@angular/material/theming';
+
 table {
     width: 100%;
+    margin-top: -30px;
+    
+  }
+
+  .fullContainer {
+    background-color: #E4E5E6;
+  }
+
+  .topText {
+    text-align:center;
+    font-weight: bold;
+    font-size: 36px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+.card {
+    zoom: 0.9;
+    transform: scale(.9);
+    -moz-transform: scale(.9);
+    background-color: #E4E5E6;
+    box-shadow: 5px 4px 4px 4px #999;
   }
   
   .mat-form-field {
@@ -8,5 +33,34 @@ table {
   }
   
   td, th {
-    width: 25%;
+    width: 50%;
+    font-family: -apple-system, BlinkMacSystemFont,
+     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 
+     'Noto Sans', sans-serif, 'Apple Color Emoji', 
+     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+     border-bottom: 1pt solid black;
+  }
+
+  th {
+    background-color: white;
+    font-weight: bold;
+  }
+  
+  tr:nth-child(even) {
+    background-color:white;
+  }
+  tr:nth-child(odd) {
+    // color: #20a8d8;
+    background-color: #f0f0f0;
+  }
+  
+  .search {
+    position: relative;
+    width: 200px;
+    height: 40px;
+    background-color: white;
+  }
+  
+  .searchwrapper {
+    margin-left:40px;
   }
