--- a/src/app/views/model/result/result.component.scss
+++ b/src/app/views/model/result/result.component.scss
@@ -4,8 +4,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 300px;
-    margin-right: 950px;
+    margin-top: 50px;
+    margin-right: 0px;
+    margin-bottom: 50px;
   }
   .app-loading .spinner {
     height: 200px;
